examples/pod-deny-host-pid/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: poddenyhostpid
spec:
  crd:
    spec:
      names:
        kind: PodDenyHostPid
  targets:
  - libs:
    - |-
      package lib.core

      import future.keywords.if

      default is_gatekeeper := false

      is_gatekeeper if {
        has_field(input, "review")
        has_field(input.review, "object")
      }

      resource := input.review.object if {
        is_gatekeeper
      }

      resource := input if {
        not is_gatekeeper
      }

      format(msg) := {"msg": msg}

      format_with_id(msg, id) := {
        "msg": sprintf("%s: %s", [id, msg]),
        "details": {"policyID": id},
      }

      apiVersion := resource.apiVersion

      name := resource.metadata.name

      kind := resource.kind

      labels := resource.metadata.labels

      annotations := resource.metadata.annotations

      gv := split(apiVersion, "/")

      group := gv[0] if {
        contains(apiVersion, "/")
      }

      group := "core" if {
        not contains(apiVersion, "/")
      }

      version := gv[count(gv) - 1]

      has_field(obj, field) if {
        not object.get(obj, field, "N_DEFINED") == "N_DEFINED"
      }

      missing_field(obj, field) if {
        obj[field] == ""
      }

      missing_field(obj, field) if {
        not has_field(obj, field)
      }
    - |-
      package lib.pods

      import future.keywords.contains
      import future.keywords.if

      import data.lib.core

      default pod := false

      pod := core.resource.spec.template if {
        pod_templates := ["daemonset", "deployment", "job", "replicaset", "replicationcontroller", "statefulset"]
        lower(core.kind) == pod_templates[_]
      }

      pod := core.resource if {
        lower(core.kind) == "pod"
      }

      pod := core.resource.spec.jobTemplate.spec.template if {
        lower(core.kind) == "cronjob"
      }

      containers contains container if {
        keys := {"containers", "initContainers"}
        all_containers := [c | some k; keys[k]; c = pod.spec[k][_]]
        container := all_containers[_]
      }

      volumes contains pod.spec.volumes[_]
    rego: |-
      package pod_deny_host_pid

      import data.lib.core
      import data.lib.pods

      policyID := "P1007"

      violation[msg] {
        pod_has_hostpid

        msg := core.format_with_id(
          sprintf("%s/%s: Pod allows for accessing the host PID namespace", [core.kind, core.name]),
          policyID,
        )
      }

      pod_has_hostpid {
        pods.pod.spec.hostPID
      }
    target: admission.k8s.gatekeeper.sh
status: {}
